objects/JBCXM__JobTracker__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AsyncJobId__c</fullName>
        <description>denotes AsyncApexJob .Referred from AsyncApexJob</description>
        <label>AsyncJobId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CompletionDate__c</fullName>
        <description>time a which this job is completed.</description>
        <label>CompletionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__FailureReason__c</fullName>
        <description>Reason for failure</description>
        <label>FailureReason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Failures__c</fullName>
        <description>denotes number of failures out of all submitted jobs.</description>
        <label>Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__JobType__c</fullName>
        <description>Type of the job submitted by user</description>
        <label>JobType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Period__c</fullName>
        <description>Date for which aggregation was run</description>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Processed__c</fullName>
        <label>Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <description>Status of the entire batch submitted by user</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__SubmittedDate__c</fullName>
        <description>denotes on which this job is submitted</description>
        <label>SubmittedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <description>Title of the submitted job</description>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__TotalBatches__c</fullName>
        <description>denotes number of batches submitted for this job.</description>
        <label>TotalBatches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JobTracker</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>